scintilla binding: fake scrollbars (r=nathanr) http://bugs.activestate.com/show_bug.cgi?id=98511
(integrated from komodo (trunk) change 79637 by marky)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@12756 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/bindings/scintilla.css
+++ b/src/chrome/komodo/skin/bindings/scintilla.css
@@ -44,6 +44,13 @@ scintilla {
   overflow: hidden; /* Don't affect split views - bug 92272 */
 }
 
+scintilla[hscroll="off"] [anonid="scrollbar_h"],
+scintilla[vscroll="off"] [anonid="scrollbar_v"],
+scintilla [anonid="scrollbar_h"][can-scroll="false"],
+scintilla [anonid="scrollbar_v"][can-scroll="false"] {
+  display: none;
+}
+
 ko-findbar {
   -moz-binding: url('chrome://komodo/content/find/findbar.xml#findbar');
 }
